--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-gray-100">
     <header
-      class="bg-[url(./img/banner.jpg)] bg-cover bg-center bg-no-repeat h-[40vh] flex flex-col items-center justify-center"
+      class="bg-[url(img/banner.jpg)] bg-cover bg-center bg-no-repeat h-[40vh] flex flex-col items-center justify-center"
     >
       <nav
         class="absolute top-0 flex justify-end w-full text-white list-none font-bold p-4"
